# Langchain_EcoSystem

./: 3_multiple_schemas.ipynb  4_trim_filter_messages.ipynb  5_chatbot_summarization.ipynb  6_1_chatbot_external_memory_with_our_db_file.ipynb  Agentic001_Excise_MVR.ipynb  Basic_chatbot.ipynb  Copy_of_1_simple_graph.ipynb  Excise_Agent.ipynb  Excise_agent.ipynb  Excise_final_AIAgent.ipynb  HIL_interrupt.ipynb  LangChain_basics.ipynb  LangChain_with_Gemini.ipynb  PIAIC_Agent.ipynb  RAG_Implementation.ipynb  README.md  Tem_Gem2.ipynb  Template_1.ipynb  Text_Analysis_Pipeline_langgraph_tutorial.ipynb  conditional_simple_graph.ipynb
03_langchain_ecosystem/langgraph/course-notebooks/module-1/: 2.2_chains_reducers.ipynb  3_router.ipynb  4_agent.ipynb  5_agent_memory.ipynb
22_langchain_ecosystem/langgraph/course-notebooks/module-1/: 2.1_tools_messages.ipynb  3_router.ipynb
Langchain/_01_gemini_standalone/: Gemini_API_python.ipynb  Readme.md
all_agents_tutorials/: customer_support_agent_langgraph.ipynb
streamlit/GeminiMind/: pyproject.toml
streamlit/GeminiMind/app/: main.py
streamlit/GeminiMind/app/models/: content_generation.py  image_to_text.py  markdown_format.py
